# rust-msbwt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quickstart-ci.yml
benches/: ds_benchmarks.rs
src/: binary_block.rs  binary_block_flat.rs  binary_block_flat2.rs  binary_bplus_tree.rs  bwt_converter.rs  bwt_util.rs  dynamic_bwt.rs  lib.rs  msbwt_core.rs  rle_bplus_tree.rs  rle_bwt.rs  rle_msbwt.rs  run_block_av_flat.rs  string_util.rs  wavelet_tree.rs
test_data/: README.md  two_string.fa  two_string.npy
