[package]
name = "msbwt2"
version = "0.1.0"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "msbwt2 - multi-string BWT query library"
homepage = "https://github.com/HudsonAlpha/rust-msbwt"
repository = "https://github.com/HudsonAlpha/rust-msbwt"
# documentation - auto-linked
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
env_logger = "0.9.0"
exitcode = "1.1.2"
log = "0.4.14"
serde_json = "1.0.58"

[dev-dependencies]
tempfile = "3.2.0"

[profile.release]
lto = true
