[package]
name = "msbwt2"
version = "0.3.1"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "msbwt2 - multi-string BWT query library"
homepage = "https://github.com/HudsonAlpha/rust-msbwt"
repository = "https://github.com/HudsonAlpha/rust-msbwt"
# documentation - auto-linked
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
bitvec = "1.0.1"
clap = { version = "3.1", features = ["cargo"] }
env_logger = "0.9.0"
exitcode = "1.1.2"
itertools = "0.10.5"
log = "0.4.14"
mimalloc = { version = "0.1.26", default_features = false }
needletail = "0.4.1"
serde_json = "1.0.58"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.7.3"
rand_core = "0.6.3"
tempfile = "3.2.0"

[profile.release]
lto = true

[[bench]]
name = "ds_benchmarks"
harness = false